--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "pg-promise": "^5.2.4",
     "react-bootstrap": "^0.30.6",
     "react-google-maps": "^4.11.0",
+    "react-router": "^3.0.0",
     "request": "^2.74.0",
     "superagent": "^2.3.0"
   },
