--- a/package.json
+++ b/package.json
@@ -26,12 +26,17 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "jsonwebtoken": "^7.1.6",
+    "moment": "^2.15.2",
     "mongo": "^0.1.0",
     "mongodb": "^2.2.4",
     "morgan": "^1.7.0",
     "path": "^0.12.7",
     "pg-promise": "^5.2.4",
     "react-bootstrap": "^0.30.6",
+    "react-calendar": "^1.1.0",
+    "react-d3": "^0.4.0",
+    "react-datepicker": "^0.34.0",
+    "react-event-calendar": "^0.3.0",
     "react-google-maps": "^4.11.0",
     "react-router": "^3.0.0",
     "request": "^2.74.0",
